// Auto-generated Protocol Buffer schema
// Generated at: 2025-09-07T15:57:33.836Z
// Source: JSON configuration structure

syntax = "proto3";

package codeuchain;

message ProdConfig {
  // Protobuf Only Config
  string languageName = 1;
  // Production Mode Test
  string title = 2;
  // 3.0.0
  string version = 3;
  bool productionFlag = 4;
}